<resources>
    <string name="app_name">ShrimpFarm</string>
    <string name="tittle_home">Beranda</string>
    <string name="tittle_notifications">Notifikasi</string>
    <string name="tittle_menu">Menu</string>
    <string name="tittle_liked">Disukai</string>
    <string name="name_user">Username</string>
    <string name="txt_welcome">Welcome</string>
    <string name="title_kontenbudidaya">Konten Budidaya</string>
    <string name="description_image">Lorem Ipsum Dolor Sit Amet\n</string>
    <string name="tittle_email">Email</string>
    <string name="tittle_login">Login</string>
    <string name="tittle_password">Password</string>
    <string name="tittle_signup">Sign Up</string>
    <string name="tittle_notifiication">Notification Title</string>
    <string name="description_notification">Notification description goes here.</string>
    <string name="tittle_logout">Log Out</string>
    <string name="keterangan_label">Keterangan: %1$s</string>
    <string name="luas_kolam_label">Luas Kolam: %1$s</string>
    <string name="jumlah_ruas_kolam_label">Jumlah Ruas Kolam: %1$s</string>
    <string name="custom_id_label">Custom ID: %1$s</string>
    <string name="desc_login">Masukkan akun yang telah terdaftar \nuntuk login</string>
    <string name="tamba_nama">Nama Tambak</string>
    <string name="tambak_nama">Nama Tambak</string>
    <string name="tambak_luaskolam">50</string>
    <string name="tambak_ruaskolam">20</string>
    <string name="divider">|</string>
    <string name="tittle_tambak">Tambak Saya</string>
    <string name="btn_tambahtambak">Tambah Tambak</string>
    <string name="tittle_detailtambak">Detail Tambak</string>
    <string name="tittle_namatambak">Nama Tambak</string>
    <string name="description_namatambak">Tambak Warsa</string>
    <string name="tittle_luaskolam">Luas Kolam</string>
    <string name="description_luaskolam">50</string>
    <string name="tittle_ruaskolam">Jumlah Ruas</string>
    <string name="desc_luaskolam">20</string>
    <string name="tittle_customid">Custom ID</string>
    <string name="tittle_detailrencana">Detail Rencana Panen</string>
    <string name="tittle_jenispanen">Jenis Panen</string>
    <string name="tittle_perkiraanpanen">Perkiraan Panen</string>
    <string name="tittle_ukuran">Ukuran Panen</string>
    <string name="tittle_tonasepanen">Tonase Panen</string>
    <string name="tittle_usia">Usia Budidaya</string>
    <string name="tittle_harga">Harga Harapan</string>
    <string name="tittle_lokasi">Lokasi Budidaya</string>
    <string name="btn_kembali">Kembali</string>
    <string name="btn_simpan">Simpan</string>
    <string name="tittle_namapengguna">Nama</string>
    <string name="tittle_phone">No. Telepon</string>
    <string name="tittle_alamat">Alamat</string>
    <string name="tittle_">Tambah Tambak</string>
    <string name="tittle_tambahtambak">Tambah Tambak</string>
    <string name="tittle_tambahrencana">Tambah Rencana Panen</string>
    <string name="jenis_panen">Jenis Panen</string>
    <string name="perkiraan_panen">Perkiraan Panen</string>
    <string name="tonase_panen">Tonase Panen</string>
    <string name="ukuran_panen">Ukuran Panen</string>
    <string name="usia_budidaya">Usia Budidaya</string>
    <string name="harga_harapan">Harga Harapan</string>
    <string name="lokasi_budidaya">Lokasi Budidaya</string>
    <string name="custom_id">Custom ID</string>
    <string name="tittle_konsultasi">Sukseskan Panenmu dengan\nKonsultasi Budidaya</string>
    <string name="tittle_konsultasigratis">Konsultasi Gratis</string>
    <string name="desc_konsulgratis">Diskusi semuanya tentang budidaya \ntanpa pungutan biaya apapun.</string>
    <string name="tittle_ahlinya">Langsung dengan Ahlinya</string>
    <string name="desc_ahlinya">Konsultasi budidaya mulai dari pH air \nhingga penyakit udang dengan pakarnya.</string>
    <string name="tittle_whatsapp">Chat Vie WhatsApp</string>
    <string name="desc_whatsapp">Ahli kami akan selalu siap \nmelayani  Kamu.</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="tittle_provinsi">Provinsi</string>
</resources>
