<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.konsultasi.KonsultasiActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tittle_konsultasi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tittle_konsultasigratis"
            android:textColor="@color/black"
            android:layout_marginTop="64dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc_konsulgratis"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tittle_ahlinya"
            android:textColor="@color/black"
            android:layout_marginTop="64dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc_ahlinya"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tittle_whatsapp"
            android:textColor="@color/black"
            android:layout_marginTop="64dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc_whatsapp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle_whatsapp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_primary"/>
    </LinearLayout>




</LinearLayout>