<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bgscreen">

    <TextView
        android:id="@+id/tambak_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/tambak_nama"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tambak_luas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambak_luaskolam"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:fontFamily="@font/poppins_light"
            android:textSize="20sp"
            android:textColor="#323232"
            android:layout_marginHorizontal="12dp"/>
        <TextView
            android:id="@+id/tambak_ruas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambak_ruaskolam"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            />
    </LinearLayout>



</LinearLayout>