<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgscreen"
    tools:context=".ui.home.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_namapengguna"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#969696"
            android:layout_marginTop="48dp"/>

        <!-- TextView for displaying 'Custom ID' -->
        <TextView
            android:id="@+id/tvNamaPengguna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_customid"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_email"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#969696"
            android:layout_marginTop="12dp"/>

        <!-- TextView for displaying 'Custom ID' -->
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_customid"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_phone"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#969696"
            android:layout_marginTop="12dp"/>

        <!-- TextView for displaying 'Custom ID' -->
        <TextView
            android:id="@+id/tvNoTelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="085156353350"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_alamat"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#969696"
            android:layout_marginTop="12dp"/>

        <!-- TextView for displaying 'Custom ID' -->
        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_customid"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_pos"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#969696"
            android:layout_marginTop="12dp"/>

        <!-- TextView for displaying 'Custom ID' -->
        <TextView
            android:id="@+id/tvKodepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_customid"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_provinsi"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#969696"
            android:layout_marginTop="12dp"/>

        <!-- TextView for displaying 'Custom ID' -->
        <TextView
            android:id="@+id/tvProvinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_customid"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>